added background, on easy way with pshop

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Slenderman game</title>
+        <title>HELP me</title>
         <link href="style/main.css" rel="stylesheet">
     </head>
     <body>
+        
         <h1>Can you escape the slenderman?</h1>
         <div class="button-wrapper">
-            <button>
+            <button onclick="newGame();">
                 New game</button>
-            <button>
+            <button onclick="loadGame();">
                 Load game</button>
-            <button>
+            <button onclick="help();">
                 Help
             </button>
         </div>
