--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HELP me</title>
         <link href="style/main.css" rel="stylesheet">
+        <link href="style/glitch.css" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.min.js"></script>
+
     </head>
     <body>
         
-        <h1>Can you escape the slenderman?</h1>
+        <h1 class="glitch-header" title="Escape it!">Escape it!</h1>
         <div class="button-wrapper">
-            <button onclick="newGame();">
-                New game</button>
-            <button onclick="loadGame();">
-                Load game</button>
-            <button onclick="help();">
-                Help
-            </button>
-        </div>
+            <!-- temporary redirects to about -->
+            <a href="pages/about.html" class="menu-button-start glitch" data-text="New Game" onclick="newGame();">
+                New game</a>
+            <a href="#" class="menu-button-start glitch" onclick="loadGame();" data-text="Load Game">
+                Load game</a>
+                <a href="#" class="menu-button-start glitch" onclick="help();"data-text="HELP">
+                    Help
+                </a>
+                <!-- <a href="#leaderboards" class="menu-button-start" >
+                    The ones that escaped
+                </a> -->
+                </div>
         <script src="scripts/script.js"></script>
     </body>
 </html>
