--- a/pages/slenderman.html
+++ b/pages/slenderman.html
@@ -6,8 +6,9 @@
     <title>What are you doing here?</title>
     <link href="../style/main.css" rel="stylesheet">
     <link href="../style/secodary.css" rel="stylesheet">
+
 </head>
 <body>
-    <h1>What are you doing here?</h1>
+    <h1>Who or what is it?</h1>
 </body>
 </html>
