--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HELP me</title>
-        <link href="style/main.css" rel="stylesheet">
-        <link href="style/glitch.css" rel="stylesheet">
+        <link href="styles/main.css" rel="stylesheet">
+        <link href="styles/glitch.css" rel="stylesheet">
     </head>
 
     <body>
